lib/tools/orbit/test_output/lazy.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.12s

tests/lazy.orb: tests/lazy.orb:7:1: Parse error
};
^
app->exec() == 1
